Cambio desde la rama test, edite el index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
 </head>
 <body>
   <h1>Practicando ramas remotas</h1>
+  <section>
+    <p>Estoy en la rama test</p>
+  </section>
 </body>
 </html>
