Primer commit desde VSC

--- a/index.html
+++ b/index.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Practicando ramas remotas</title>
+  <title>Practicando ramas remotas </title>
 </head>
 <body>
-  <h1>Practicando ramas remotas</h1>
+  <h1>Practicando ramas remotas y a utilizar GIT con VSC</h1>
   <section>
     <p>Estoy en la rama test</p>
   </section>
+  <div>
+    <p>Este cambio fue realizado des VSC</p>
+  </div>
 </body>
 </html>
