--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </section>
   <div>
     <p>Este cambio fue realizado des VSC</p>
+    <p>Este cambio fue desde GIthub</p>
   </div>
 </body>
 </html>
